--- a/index.ipynb
+++ b/index.ipynb
@@ -3,83 +3,83 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#hide\n",
-    "from your_lib.core import *"
-   ]
+    "from fairfusion import *"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# FairFusion - Measuring Temperature\n",
     "\n",
-    "> Summary description here."
-   ]
+    "This repo contains code for running the Adafruit DHT22 temperature and humidity sensor with a RaspberryPi. You can register the all sensory measurements in a csv file with a date and time stamp. In addition, you can adjust the following settings: measurement interval (time) and storage location."
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "This file will become your README and also the index of your documentation."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Install"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "`pip install your_project_name`"
-   ]
+    "`pip install fairfusion`"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## How to use"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Fill me in please! Don't forget code examples:"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [
+    "python3 temp_reg_p.py"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "2"
       ]
      },
-     "execution_count": null,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": null
     }
    ],
-   "source": [
-    "1+1"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
